--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "Kensei Demura",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
     "bluebird": "^3.4.7",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
