--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "App for Bee Bee Bungalows",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index.js",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel --presets es2015,stage-0 index.js -d build/; ./await.sh",
+    "build": "babel -w src/index.js -d dist/",
     "build-pages": "ejslint views/pages/index.ejs"
   },
   "author": "Kensei Demura",
